manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: demo-container
          image: <IMAGE>
          ports:
            - containerPort: 80
          volumeMounts:
            - name: todo-config
              mountPath: /app/config/
      volumes:
        - name: todo-config
          configMap:
            name: todo-config-file

---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
